--- a/package.json
+++ b/package.json
@@ -2,15 +2,8 @@
   "name": "trust-is-risk",
   "version": "0.0.1",
   "description": "A full bitcoin node that implements the Trust Is Risk trust inference system.",
-  "main": "lib/index.js",
   "scripts": {
-    "build": "flow-remove-types -d lib/ src/",
-    "test": "npm run build && mocha -t 100000",
-    "prepublish": "npm run build",
-    "typecheck": "flow check",
-    "lint": "./node_modules/.bin/eslint --fix src/ test/",
-    "check": "npm run lint && npm run typecheck && npm run test",
-    "postinstall": "scripts/postinstall.sh"
+    "typecheck": "flow check"
   },
   "repository": {
     "type": "git",
@@ -28,20 +21,6 @@
   },
   "homepage": "https://github.com/decrypto-org/TrustIsRisk.js#readme",
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "flow-bin": "^0.45.0",
-    "flow-remove-types": "^1.2.3",
-    "mocha": "^8.2.1",
-    "should": "^11.2.1",
-    "should-sinon": "0.0.5",
-    "sinon": "^5.1.1"
-  },
-  "dependencies": {
-    "bcoin": "git+https://github.com/bcoin-org/bcoin.git#semver:^2.1.2",
-    "bcrypto": "^5.3.0",
-    "graph-theory-ford-fulkerson": "^1.0.0",
-    "sorted-set": "^0.3.0"
+    "flow-bin": "^0.143.0"
   }
 }
